#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([john], [1.8.0.bleeding], [noone@dev.null])
AC_CONFIG_SRCDIR([.])
AC_CONFIG_HEADERS([autoconfig.h])


dnl Most of these things are boiler plate (from autoscan);
dnl but here's some of my stuff
dnl BEGIN JIM's BLOCK OF STUFF

LDFLAGS="-L/usr/local/lib -L/usr/local/ssl/lib "

dnl END JIM's BLOCK OF STUFF


# Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_CPP

# Checks for libraries.
################################################
#  NOTE, be VERY careful of spaces around the comma's in the AC_CHECK_LIB. Best to not have any.
#  If there are space, then often that will get a lib to NOT be added to @LIBS@ and cause linkage problems.
################################################
AC_CHECK_LIB(c,printf,,[echo "JtR can NOT be build without libc being installed" ; exit 1])
AC_CHECK_LIB([ssl],[SSL_library_init],[],[echo "JtR can NOT be build without libssl being installed" ; exit 1])
AC_CHECK_LIB([crypto],[MD5_Update],[],[echo "JtR can NOT be build without libssl/libcrypto being installed" ; exit 1])
AC_CHECK_LIB([m],[sqrt],[],[echo "JtR can NOT be build without libm being installed" ; exit 1])
AC_CHECK_LIB([z],[deflate],[],[echo "JtR can NOT be build without libz being installed" ; exit 1])
AC_CHECK_LIB([crypt],[encrypt])
AC_CHECK_LIB([k5crypto],[krb5_c_string_to_key_with_params],[],[echo "   ****" && echo "   NOTE: Installing MIT krb5 (k5crypto) library enables several extra formats" && echo "   ****" ])
AC_CHECK_LIB([krb5],[krb5_c_string_to_key_with_params])
AC_CHECK_LIB([gmp],[__gmpz_init],[],[echo "   ****" && echo "   NOTE: Installing libgmp will speed up some hash formats" && echo "   ****" ])
AC_CHECK_LIB([gdi32],[main])
AC_CHECK_LIB([kernel32],[main])
AC_CHECK_LIB([ws2_32],[main])
AC_CHECK_LIB([wsock32],[main])
AC_CHECK_LIB([dl],[dlopen])
AC_SEARCH_LIBS([c_regex_iterator_cb],[rexgen librexgen],[],[echo "   ****" && echo "   NOTE: Installing librexgen installs a powerful new wordlist most" && echo "   ****" ])
# FIXME: Replace `main' with a function in `-lcudart':
AC_CHECK_LIB([cudart],[main])
# FIXME: Replace `main' with a function in `-lOpenCL':
AC_CHECK_LIB([OpenCL],[main])
# FIXME: Replace `main' with a function in `-lnsl':
AC_CHECK_LIB([nsl],[main])
# FIXME: Replace `main' with a function in `-lpcap':
AC_CHECK_LIB([pcap],[main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread],[main])
# FIXME: Replace `main' with a function in `-lrt':
AC_CHECK_LIB([rt],[main])
# FIXME: Replace `main' with a function in `-lsocket':
AC_CHECK_LIB([socket],[main])
# FIXME: Replace `main' with a function in `-lwst':
AC_CHECK_LIB([wst],[main])

# Checks for header files.
AC_CHECK_HEADERS([OS.h arpa/inet.h sys/times.h fcntl.h limits.h locale.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/param.h sys/socket.h sys/time.h sys/timeb.h termios.h unistd.h wchar.h unixlib/local.h netinet/if_ether.h pcap.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_CHECK_FUNCS([atexit endpwent floor ftruncate gethostbyname gettimeofday inet_ntoa isascii memchr memmove memset mkdir munmap pow rmdir select setenv setlocale socket strcasecmp strchr strcspn strdup strerror strncasecmp strrchr strspn strstr strtol strtoul])

AC_CONFIG_FILES([Makefile
                 aes/Makefile
                 aes/aesni/Makefile
                 aes/openssl/Makefile
                 escrypt/Makefile])
AC_OUTPUT(,echo "timestamp from configure.in" > autoconfig-stamp-h & echo "I want to echo something")
